fix: remove whitespace to right

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 }
 
 body {
-    width: 100vw;
     display: flex;
     flex-direction: column;
     gap: 10px;
